syntax = "proto3";

package settings;

option java_package = "com.inwords.expenses.feature.settings.data";
option java_multiple_files = true;

message Settings {
  int64 current_event_id = 1;
  int64 current_person_id = 2;
}